--- a/Use_Twitch_JSON_API/styles.css
+++ b/Use_Twitch_JSON_API/styles.css
@@ -3,26 +3,42 @@ html {
   margin: auto;
 }
 
-.page-header {
-  background-color: #CCC;
-  text-align: center;
-}
-
 h1 {
-  color: #FFF;
-  text-align: center;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-bottom: 10px;
+  color: #D4D9D8;
+  text-align: left;
+  background-color: #3B3F41;
 }
 
 .media {
-  margin: 10px;  
+  height: 90px;
+}
+
+.online {
+    background-color: #A4DE87;
+}
+
+.offline {
+    background-color: #9DA3B1;
+    
 }
 
 .media-object {
-  width: 160px;
-  height: 100px;
-  border: thick dashed #898A6F;
+  margin-top: 8px;
+  margin-left: 8px;
+  width: 75px;
+  height: 75px;
+  border: medium solid #D4D9D8;
+  border-radius: 50pc;
+}
+
+.media-heading {
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .media-status {
-  color: #A4DE87;
-}
+  margin-left: 50px; 
+}   
