--- a/Use_Twitch_JSON_API/styles.css
+++ b/Use_Twitch_JSON_API/styles.css
@@ -1,9 +1,10 @@
-html {
-  background-color: #000;
+.container {
+  background-color: #D4D9D8;
   margin: auto;
 }
 
 h1 {
+  border-radius: 5px;
   padding-top: 10px;
   padding-left: 20px;
   padding-bottom: 10px;
@@ -12,8 +13,20 @@ h1 {
   background-color: #3B3F41;
 }
 
+.btn-group {
+  margin-bottom: 10px; 
+}
+
 .media {
   height: 90px;
+}
+
+#on {
+    background-color: #A4DE87;  
+}
+
+#off {
+    background-color: #9DA3B1;  
 }
 
 .online {
@@ -25,6 +38,9 @@ h1 {
     
 }
 
+.media {
+   border-radius: 5px;
+}
 .media-object {
   margin-top: 8px;
   margin-left: 8px;
@@ -41,4 +57,4 @@ h1 {
 
 .media-status {
   margin-left: 50px; 
-}   
+}
