--- a/TicTacToe_Game/styles.css
+++ b/TicTacToe_Game/styles.css
@@ -1,15 +1,27 @@
-p {
-/*   display: none;   */
+.score {
+  display: none; 
+  margin-top: 20px;
 }
 
 ul { 
   list-style-type: none;
   margin-left: -30px;
   cursor: pointer;
+  color: green;
 }
 
 li {
   display: none;
+  color: green;
+}
+
+a {
+  color: green;
+  text-decoration-line: none;
+}
+
+a:hover {
+  color: green;
 }
 
 span#O {
@@ -25,13 +37,15 @@ body {
   width: 400px;
   font-family: 'VT323', latin; 
   font-size: 30px;
-/*   text-shadow: 0 0 20px #00ff7f; */
   color: green;
   background-color: black;
 }
 
+.container {
+  width: 350px;
+}
+
 canvas {
-/*   background-color: blue; */
   border: medium solid white;
   display: none;
   cursor: pointer;
